compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__undeclared_symbol-2.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a := a"

---
"a"@(FileId(1), 9..10) [Undeclared]: <error>
"a"@(FileId(1), 4..5) [Declared]: ref_mut <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 9..10: `a` is not declared
