compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_inference-2.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k := 'oe'"

---
ty_nodes:
def_kinds:
    DefId(0) Var(TyRef(CharN(Fixed(2))))
