compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_inference-3.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k := 'o'"
---
"k"@(FileId(1), 4..5) [ConstVar(Var, No)]: char
"<root>"@(dummy) [Module(No)]: <error>

