compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_inference.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k := \"oeuf\""

---
ty_nodes:
def_kinds:
    DefId(0) Var(TyRef(String))
