compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_init_typecheck.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k : string := \"oeuf\""

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(String)
def_kinds:
    DefId(0) Var(TyRef(String))
