compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__var_decl_type_spec.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k : string"

---
"k"@(FileId(1), 4..5) [Declared]: ref_mut string
"<root>"@(dummy) [Declared]: <error>

