compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__zero_sized.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : string(0)"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Error)
def_kinds:
    DefId(0) Var(TyRef(Error))
error at 15..16: invalid character count size
| info for 15..16: valid sizes are between 1 to 32767
| note for 15..16: computed count is 0
